[package]
name = "chunk-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="0.5", features = ["ws"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = {version="0.4"}
env_logger = "0.9"
lazy-regex = "2.3.0"
tower-http = {version = "0.3.4", features = ["full"]}
mime_guess = "2.0.4"
tower = "0.4.13"
axum-extra = {version="0.3.7", features = ["spa"]}
futures-util = "0.3.24"
futures = "0.3.24"
hyper = {version = "0.14.20", features=["full"]}
reqwest = "0.11.12"

