[package]
name = "chunk-app"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="0.5", features = ["ws"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = {version="0.4"}
env_logger = "0.9"
tower-http = {version = "0.3.4", features = ["full"]}
mime_guess = "2.0.4"
tower = "0.4.13"
axum-extra = {version="0.3.7", features = ["spa"]}
futures-util = "0.3.24"
futures = "0.3.24"
hyper = {version = "0.14.20", features=["full"]}
reqwest = "0.11.12"
lazy_static = "1.4.0"
regex = "1.6.0"
proquint = { git = "https://github.com/rubend056/proquint-rs" }
rand = "0.8.5"
argon2 = "0.4.1"
pasetors = "0.6.3"
diff = "0.1.13"
tokio-util = "0.7.4"
infer = "0.11.0"
image = {version= "0.24.5", features = ["avif"]}
time = "0.3.17"
quick-js = "0.4.1"
deno_core = "0.161.0"

[profile.dev.package."*"]
opt-level = 3
