[package]
name = "chunk-app"
version = "0.6.0"
edition = "2021"
authors = ["RubenD"]
description = "Chunk, a notes app"
default-run = "chunk-app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"           # The name of the target.
path = "src/lib.rs"    # The source file of the target.
test = true            # Is tested by default.
doctest = true         # Documentation examples are tested by default.
bench = true           # Is benchmarked by default.
doc = true             # Is documented by default.
proc-macro = false     # Set to `true` for a proc-macro library.
harness = true         # Use libtest harness.
edition = "2021"       # The edition of the target.
crate-type = ["lib"]   # The crate types to generate.


[[bin]]
name = "auth"

[dependencies]
axum = {version="0.6", features = ["ws", "macros", "headers"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = {version="0.4"}
env_logger = "0.10"
tower-http = {version = "0.3.4", features = ["full"]}
mime_guess = "2.0.4"
tower = "0.4.13"
axum-extra = {version="0.4.2", features = ["spa"]}
futures-util = "0.3.24"
futures = "0.3.24"
hyper = {version = "0.14.20", features=["full"]}
reqwest = "0.11.12"
lazy_static = "1.4.0"
regex = "1.6.0"
proquint = { git = "https://github.com/rubend056/proquint-rs" }
rand = "0.8.5"
argon2 = "0.4.1"
pasetors = "0.6.3"
diff = "0.1.13"
tokio-util = "0.7.4"
infer = "0.11.0"
image = {version= "0.24.5", features = ["avif"]}
time = "0.3.17"
pulldown-cmark = "0.9.2"
headers = "0.3.8"

[profile.dev.package.image]
opt-level = 3
